<resources>
    <string name="app_name">Clothing E-commerce app</string>
    <string name="text_title_getting_started">Do you want to buy used clother in cheaper price</string>
    <string name="text_subtitle_getting_started">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin</string>
    <string name="text_btn_get_started">Get Started</string>
    <string name="place_holder_text_clothe_title">T-Shirt</string>
    <string name="text_clothe_title" />
    <string name="place_holder_text_clothe_price">$100.00</string>
    <string name="text_clothe_price" />
    <string name="place_holder_text_clothe_location_distance">2km</string>
    <string name="text_clothe_location_distance" />
    <string name="place_holder_text_location_country_city">Zurich, CH</string>
    <string name="text_location_country_city" />
    <string name="text_searcher_title">Clothes around your area</string>
    <string name="search_hint">Search</string>
    <string name="text_categories_title">Categories</string>
    <string name="text_clothe_category_title" />
    <string name="place_holder_text_clothe_category_title">Tops</string>
    <string name="text_sign_in_title">Sign in</string>
    <string name="text_email_title">Email</string>
    <string name="text_til_email">Email</string>
    <string name="text_til_pass">password</string>
    <string name="text_password_title">Password\t</string>
    <string name="text_message_forgot_password">Forgot password?</string>
    <string name="text_remember_me_title">Remember me</string>
    <string name="text_btn_log_in">LOGIN</string>
    <string name="text_or_title">-OR-</string>
    <string name="text_sign_with_sm_title">Sign in with</string>
    <string name="text_missing_account_title">Don’t have an Account?</string>
    <string name="text_sign_up_title">Sign up</string>
    <string name="text_full_name_title">Full name</string>
    <string name="text_full_name">Full name</string>
    <string name="text_phone_number_title">Phone number</string>
    <string name="text_til_phone_number">Phone number</string>
    <string name="text_confirm_password_title">Confirm password</string>
    <string name="text_btn_sign_up">REGISTER</string>
    <string name="text_already_have_account_title">Already have an account?</string>
    <string name="text_title_sign_up">Sign Up</string>
    <string name="text_subtitle_sign_up" />
    <string name="place_holder_text_subtitle_sign_up">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod\ntempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,\nquis nostrud exercitation ullamco</string>
    <string name="text_title_success">Success</string>
    <string name="text_title_error">Error</string>
    <string name="text_btn_success">Continue</string>
    <string name="text_btn_error">Try again</string>
    <string name="text_title_warning">Warning</string>
    <string name="text_btn_warning">Accept</string>
    <string name="text_btn_accept">Accept</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="place_holder_text_title_confirmation">Question place_holder?</string>
    <string name="text_title_confirmation" />
    <string name="text_activity_title">Fetch Exercise</string>
    <string name="text_sort_by_field">Sorting criteria: 1st by listId, 2nd by name</string>
    <string name="text_filter_by_name">Filter by:</string>
    <string name="text_list_id">listId:</string>
    <string name="place_holder_text_list_id">20</string>
    <string name="text_id">id:</string>
    <string name="place_holder_text_id">1</string>
    <string name="text_name">name:</string>
    <string name="place_holder_text_name">Item 808</string>
    <string name="text_activity_subtitle">All items are grouped by listId</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_select_shipping_address">Select Shipping Address</string>
    <string name="text_delivery_address">Type in the delivery address</string>
    <string name="text_label_address_location" />
    <string name="place_holder_text_label_address_location">Current location</string>
    <string name="text_title_google_maps">Address confirmation</string>
    <string name="text_label_city" />
    <string name="place_holder_text_label_city">Ciudad de Mexico</string>
    <string name="text_label_country" />
    <string name="place_holder_text_label_country">Mexico</string>
    <string name="text_label_find_me">Find me</string>
    <string name="text_btn_set_location_map">Set location</string>
    <string name="text_title_details_title" />
    <string name="place_holder_text_title_details_title">Name</string>
    <string name="text_status_available">Available</string>
    <string name="text_status_sold">Sold</string>
    <string name="text_status_inactive">Inactive</string>
    <string name="place_holder_text_total_title">$200.00</string>
    <string name="place_holder_text_tv_details_subtitle">T-shirt from Zara</string>
    <string name="text_tv_details_subtitle" />
    <string name="text_details_title_condition">Condition</string>
    <string name="text_details_value_condition_value" />
    <string name="place_holder_text_details_value_condition_value">Fair</string>
    <string name="place_holder_text_details_title_condition">Condition</string>
    <string name="text_details_title_size">Size</string>
    <string name="text_details_value_size" />
    <string name="place_holder_text_details_value_size">XS</string>
    <string name="text_details_title_brand">Brand</string>
    <string name="text_details_value_brand" />
    <string name="place_holder_text_details_value_brand">Zara</string>
    <string name="text_details_title_material">Material</string>
    <string name="text_details_value_material" />
    <string name="place_holder_text_details_value_material">Cotton</string>
    <string name="place_holder_text_details_value_color">Pink</string>
    <string name="text_details_value_color" />
    <string name="text_details_title_color">Color</string>
    <string name="text_details_title_location">Location</string>
    <string name="text_details_value_location" />
    <string name="place_holder_text_details_value_location">Kastanienallee, Berlin</string>
    <string name="text_details_title_date_listed">Date listed</string>
    <string name="text_details_value_date_listed" />
    <string name="place_holder_text_details_value_date_listed">03/03/2023</string>
    <string name="text_details_title_description">Description</string>
    <string name="text_details_value_description" />
    <string name="place_holder_text_details_value_description">"Gnocchi is lovely and well trained dog. She loves to pull a little bit when she sees other dogs. "</string>
    <string name="text_details_title_seller">SELLER</string>
    <string name="place_holder_text_seller_name">John williams</string>
    <string name="text_view_full_profile">View Profile</string>
    <string name="text_title_screen">Cart</string>
    <string name="text_title_subtotal">Subtotal</string>
    <string name="text_title_discount">Discount</string>
    <string name="text_title_shipping">Shipping</string>
    <string name="text_title_total">Total</string>
    <string name="text_title_subtotal_value" />
    <string name="place_holder_text_title_subtotal_value">$100.00</string>
    <string name="text_title_discount_value" />
    <string name="place_holder_text_title_discount_value">5%</string>
    <string name="text_title_shipping_value" />
    <string name="place_holder_text_title_shipping_value">$15.00</string>
    <string name="text_title_total_value" />
    <string name="place_holder_text_title_total_value">$110.00</string>
    <string name="text_btn_go_back">Go back</string>
    <string name="text_btn_checkout">Checkout</string>
    <string name="text_title_screen_shipping_address">Select shipping address</string>
    <string name="text_btn_proceed_payment">Proceed to payment</string>
    <string name="place_holder_tv_address_name">Mike Roberto</string>
    <string name="tv_address_name" />
    <string name="text_address_detailed" />
    <string name="place_holder_text_address_detailed">Rosecrans Ave, Suite 200 El Segundo, USA</string>
    <string name="text_address_phone_number" />
    <string name="place_holder_text_address_phone_number">(+501) 425 906 4618</string>
    <string name="text_address_zip_code">Zip code:</string>
    <string name="text_address_zip_code_value" />
    <string name="place_holder_text_address_zip_code_value">92053</string>
    <string name="text_address_notes">Notes:</string>
    <string name="text_address_notes_value" />
    <string name="place_holder_text_address_notes_value">Call when arriving</string>
    <string name="text_btn_add_new_address">Add new address</string>
    <string name="text_title_screen_create_shipping_address">Create address</string>
    <string name="text_btn_add_address">Add address</string>
    <string name="text_name_title">Full name</string>
    <string name="text_phone_title">Phone</string>
    <string name="text_street_address_title">Street address</string>
    <string name="text_city_title">City</string>
    <string name="text_state_title">State</string>
    <string name="text_zip_code_title">Zip code</string>
    <string name="text_title_screen_filters">Filters</string>
    <string name="text_title_clear_all">Clear all</string>
    <string name="text_title_price_range">Price range:</string>
    <string name="text_title_categories">Categories:</string>
    <string name="text_title_condition">Condition:</string>
    <string name="text_title_gender">Gender:</string>
    <string name="text_title_distance">Distance:</string>
    <string name="text_title_delivery">Delivery:</string>
    <string name="text_title_sort_by">Sort by:</string>
    <string name="text_title_size">Size</string>
    <string name="text_title_from">From</string>
    <string name="text_title_to">To</string>
    <string name="text_from">From:</string>
    <string name="text_to">To</string>
    <string name="text_title_chip" />
    <string name="place_holder_text_title_chip">1 - wellworn</string>
    <string name="text_radio_s">S</string>
    <string name="text_radio_m">M</string>
    <string name="text_radio_l">L</string>
    <string name="text_radio_xl">XL</string>
    <string name="text_radio_xxl">XXL</string>
    <string name="place_holder_text_item_spinner_list">T-28</string>
    <string name="text_btn_confirm_payment">Confirm Payment</string>
    <string name="text_title_screen_payment_methods">Payment methods</string>
    <string name="place_holder_text_bank_account_number">4111 1111 1111 1111</string>
    <string name="place_holder_text_bank_account_name">Guadalupe Javier Armenta</string>
    <string name="text_title_screen_add_new_payment">Add a new payment</string>
    <string name="text_card_bank_type_network" />
    <string name="text_card_bank_type_network_visa">VISA</string>
    <string name="text_card_bank_type_network_master_card">Master Card</string>
    <string name="text_card_bank_type_network_apple_pay">Apple pay</string>
    <string name="text_title_screen_purchase_done">Purchase done</string>
    <string name="place_holder_tv_address_detailed_1">Shipment to Rosecrans Ave, 200</string>
    <string name="place_holder_tv_address_detailed_2">El Segundo, USA</string>
    <string name="text_subtitle_screen_purchase_done">In delivery</string>
    <string name="text_btn_go_home">Go home</string>
    <string name="place_holder_text_card_bank_type_network_apple_pay_selected">BBVA: **** 5793</string>
    <string name="place_holder_text_card_bank_type_network_selected_details">Here we write the details about the TDD/TDC</string>
    <string name="text_card_bank_type_network_apple_pay_selected" />
    <string name="text_card_bank_type_network_selected_details" />
</resources>